# qcore-rs

./: .gitignore  AUTHENTICATION_REMOVAL_SUMMARY.md  CLUSTER.md  Cargo.toml  MIGRATION_SUMMARY.md  PEER_SERVICE.md  PERSISTENT_CONNECTIONS.md  README.md  WEBSOCKET_API.md  base-topology.json  demo_client.sh  launch_cluster.sh  schemas.yaml  test_client.sh  test_cluster.sh  test_discovery.sh
examples/: websocket_client.rs
src/: api.rs  app.rs  auth.rs  clients.rs  config.rs  core.rs  discovery.rs  fault_tolerance.rs  files.rs  heartbeat.rs  io.rs  lib.rs  main.rs  main.rs.bak  management.rs  misc.rs  network.rs  peer_manager.rs  peers.rs  periodic_client.rs  persistance.rs  protocol.rs  raft.rs  snapshot.rs  states.rs  store.rs  store_service.rs  wal.rs  websocket.rs
tests/: integration_tests.rs
tests/common/: mod.rs
