[package]
name = "qcore-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qcore-rs"
path = "src/main.rs"

[[bin]]
name = "snapshot-tool"
path = "src/bin/snapshot-tool.rs"

[[bin]]
name = "tree-tool"
path = "src/bin/tree-tool.rs"

[[bin]]
name = "wal-tool"
path = "src/bin/wal-tool.rs"

[[bin]]
name = "select-tool"
path = "src/bin/select-tool.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3"
clap = { version = "4.5.45", features = ["derive"] }
futures-util = "0.3"
indicatif = "0.17"
qlib-rs = { "path"="../qlib-rs" }
rand = "0.8"
serde = "1.0.219"
serde_json = "1.0.140"
tabled = "0.15"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.21"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
cel = "0.11.0"
time = { version = "0.3.42", features = ["serde", "parsing", "formatting"] }
